@@ -1,3 +1,7 @@
+2008-02-05  Mark Ellis <mark@mpellis.org.uk>
+
+	* set password property to 'unset' if not passworded
+
 2008-01-25  Mark Ellis <mark@mpellis.org.uk>
 
 	* Finish password procedures
